コンポーネントベースでアプリを書いた

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+  <!-- app/views/layouts/application.html.erb-->
     <%= yield %>
     <%= javascript_pack_tag 'application' %>
   </body>
